--- a/bachproef/bachproef-tin.tex
+++ b/bachproef/bachproef-tin.tex
@@ -13,13 +13,14 @@
 \definecolor{lightgray}{rgb}{.9,.9,.9}
 \definecolor{darkgray}{rgb}{.4,.4,.4}
 \definecolor{purple}{rgb}{0.65, 0.12, 0.82}
-\definecolor{green}{rgb}{0,.9,0}
+\definecolor{green}{rgb}{0,.6,0}
 \lstdefinelanguage{JavaScript}{
 	keywords={break, case, catch, continue, debugger, default, delete, do, else, false, finally, for, function, if, in, instanceof, new, null, return, switch, this, throw, true, try, typeof, var, void, while, with},
 	morecomment=[l]{//},
 	morecomment=[s]{/*}{*/},
 	morestring=[b]',
 	morestring=[b]",
+    morestring=[b]`,
 	ndkeywords={class, export, boolean, throw, implements, import, @Component},
 	keywordstyle=\color{blue}\bfseries,
 	ndkeywordstyle=\color{purple}\bfseries,
